[gd_scene load_steps=21 format=1]

[ext_resource path="res://MainMenuScene/main_menu.gd" type="Script" id=1]
[ext_resource path="res://MainMenuScene/back_grid.png" type="Texture" id=2]
[ext_resource path="res://MainMenuScene/enemy1.png" type="Texture" id=3]
[ext_resource path="res://MainMenuScene/enemy_background.gd" type="Script" id=4]
[ext_resource path="res://MainMenuScene/button_play1.png" type="Texture" id=5]
[ext_resource path="res://MainMenuScene/button_play2.png" type="Texture" id=6]
[ext_resource path="res://MainMenuScene/button_options1.png" type="Texture" id=7]
[ext_resource path="res://MainMenuScene/button_options2.png" type="Texture" id=8]
[ext_resource path="res://MainMenuScene/button_credits1.png" type="Texture" id=9]
[ext_resource path="res://MainMenuScene/button_credits2.png" type="Texture" id=10]
[ext_resource path="res://MainMenuScene/button_exit1.png" type="Texture" id=11]
[ext_resource path="res://MainMenuScene/button_exit2.png" type="Texture" id=12]
[ext_resource path="res://MainMenuScene/title.png" type="Texture" id=13]
[ext_resource path="res://MainMenuScene/button_OK1.png" type="Texture" id=14]
[ext_resource path="res://MainMenuScene/button_OK2.png" type="Texture" id=15]
[ext_resource path="res://MainMenuScene/button_cancel1.png" type="Texture" id=16]
[ext_resource path="res://MainMenuScene/button_cancel2.png" type="Texture" id=17]
[ext_resource path="res://Font/font_32.fnt" type="Font" id=18]

[sub_resource type="Theme" id=1]


[sub_resource type="Theme" id=2]


[node name="Node" type="Node"]

script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script" }

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 2.78952, 0 )
transform/scale = Vector2( 1.00004, 1.02172 )
texture = ExtResource( 2 )
centered = false

[node name="enemy1" type="Sprite" parent="."]

transform/pos = Vector2( 47.7135, -59.0739 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="enemy2" type="Sprite" parent="."]

transform/pos = Vector2( 47.7135, -59.0739 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="enemy3" type="Sprite" parent="."]

transform/pos = Vector2( 47.7135, -59.0739 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="enemy4" type="Sprite" parent="."]

transform/pos = Vector2( 47.7135, -59.0739 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="enemy5" type="Sprite" parent="."]

transform/pos = Vector2( 47.7135, -59.0739 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="enemy6" type="Sprite" parent="."]

transform/pos = Vector2( 47.7135, -59.0739 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="enemy7" type="Sprite" parent="."]

transform/pos = Vector2( 47.7135, -59.0739 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="enemy8" type="Sprite" parent="."]

transform/pos = Vector2( 47.7135, -59.0739 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="enemy9" type="Sprite" parent="."]

transform/pos = Vector2( 47.7135, -59.0739 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="enemy" type="Sprite" parent="."]

transform/pos = Vector2( 47.7135, -59.0739 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="PlayButton" type="TextureButton" parent="."]

margin/left = 845.0
margin/top = 100.0
margin/right = 1145.0
margin/bottom = 204.4
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
textures/hover = ExtResource( 6 )
params/scale = Vector2( 0.6, 0.6 )

[node name="OptionsButton" type="TextureButton" parent="."]

margin/left = 845.0
margin/top = 230.0
margin/right = 1145.0
margin/bottom = 334.4
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
textures/hover = ExtResource( 8 )
params/scale = Vector2( 0.6, 0.6 )

[node name="CreditsButton" type="TextureButton" parent="."]

margin/left = 845.0
margin/top = 360.0
margin/right = 1145.0
margin/bottom = 464.4
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
textures/hover = ExtResource( 10 )
params/scale = Vector2( 0.6, 0.6 )

[node name="ExitButton" type="TextureButton" parent="."]

margin/left = 845.0
margin/top = 498.0
margin/right = 1145.0
margin/bottom = 602.4
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )
textures/hover = ExtResource( 12 )
params/scale = Vector2( 0.6, 0.6 )

[node name="TextureFrame" type="TextureFrame" parent="."]

margin/left = 28.0
margin/top = 315.0
margin/right = 761.0
margin/bottom = 387.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
texture = ExtResource( 13 )

[node name="ExitPopup" type="Popup" parent="."]

process/pause_mode = 2
visibility/visible = false
margin/left = 154.0
margin/top = 278.0
margin/right = 454.0
margin/bottom = 478.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 1 )
popup/exclusive = true
__meta__ = { "_editor_collapsed":true }

[node name="Panel" type="Panel" parent="ExitPopup"]

margin/right = 300.0
margin/bottom = 200.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = SubResource( 2 )

[node name="OKButton" type="TextureButton" parent="ExitPopup/Panel"]

margin/left = 28.0
margin/top = 130.0
margin/right = 528.0
margin/bottom = 304.0
rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 14 )
textures/pressed = ExtResource( 15 )

[node name="CancelButton1" type="TextureButton" parent="ExitPopup/Panel"]

margin/left = 171.0
margin/top = 130.0
margin/right = 221.0
margin/bottom = 179.0
rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 16 )
textures/pressed = ExtResource( 17 )

[node name="Label" type="Label" parent="ExitPopup/Panel"]

margin/left = 8.0
margin/top = 45.0
margin/right = 287.0
margin/bottom = 109.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 18 )
text = "Do you want to Quit\?"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]

[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]

[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]

[connection signal="pressed" from="ExitPopup/Panel/OKButton" to="." method="_on_OKButton_pressed"]

[connection signal="pressed" from="ExitPopup/Panel/CancelButton1" to="." method="_on_CancelButton1_pressed"]


